# slack-paste

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
