[package]
name = "slack-paste"
version = "0.1.0"
description = "Paste stdin to slack"
authors = ["Brian Rowe <briprowe@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
keywords = ["cli", "slack"]
repository = "https://github.com/briprowe/slack-paste"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
directories = "3.0.1"
read_input = "0.8.4"
serde = { version = "1.0.116", features = ["derive"] }
slack-morphism = "0.2.8"
slack-morphism-models = "0.2.8"
tokio = "0.2.22"
toml = "0.5"

[[bin]]
name = "slack-paste"